--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google-cloud/local-auth": "^3.0.1",
+    "@tanstack/react-query": "^5.77.2",
     "date-fns": "^4.1.0",
     "googleapis": "^149.0.0",
     "next": "15.3.2",
